# Tutorial-Click

./: .gitignore  README.md  README2.md  mycli.py  mycli.spec  pyproject.toml  readme.md  runner.py
.github/workflows/: publish.yml
my-cli-project/: utils.py
my_cli_project/: cli.py
tests/: runner.py  test_cli.py
