[tool.poetry]
name = "my_cli_project"
version = "0.0.1"

description = "A sample CLI project build with Poetry."
authors = ["Your Name <IanFogelman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
mycli = "my_cli_project.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"